--- a/Sunc.Framework.Repository/packages.config
+++ b/Sunc.Framework.Repository/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net40" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
 </packages>
